fixed table spacing and formatting of headers

--- a/staticblog/content/styles/site.css
+++ b/staticblog/content/styles/site.css
@@ -24,13 +24,13 @@ body {
   font-family: Georgia, "Times New Roman", serif;
 }
 
-h1, h2 {
+h1, h2, h3, h4 {
+  color: var(--accent-color);
   line-height: 1.6;
 }
 
 h1 {
   text-align: center;
-  color: var(--accent-color);
   margin:0;
 }
 
@@ -140,6 +140,7 @@ blockquote {
 }
 
 table {
+  margin: 15px 0px;
   border-collapse: collapse;
   width: 100%;
 }
